Some clean up of Buttons